# LLMBrain

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: baseline.yaml  llm_conditioned.yaml
scripts/: evaluate.py  generate_prompts.py  preprocess.py  train.py
src/llmbrain/: __init__.py
src/llmbrain/data/: __init__.py  dataset.py  transforms.py
src/llmbrain/evaluation/: __init__.py  metrics.py  visualize.py
src/llmbrain/models/: __init__.py  cross_attention.py  llm_encoder.py  swin_unetr.py
src/llmbrain/training/: __init__.py  losses.py  trainer.py
src/llmbrain/utils/: __init__.py  config.py
